force-app/main/default/objects/Endere_o_da_Conta__c/Endere_o_da_Conta__c.object-meta.xml
<CustomObject>
    <label>Endereço da Conta</label>
    <nameField>
        <label>Endereço da Conta Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Endereço das Contas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>