force-app/main/default/objects/Endere_o_da_Conta__c/fields/CEP__c.field-meta.xml
<CustomField>
    <fullName>CEP__c</fullName>
    <label>CEP</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>