force-app/main/default/objects/Endere_o_da_Conta__c/fields/Cidade__c.field-meta.xml
<CustomField>
    <fullName>Cidade__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cidade</label>
    <referenceTo>Cidade__c</referenceTo>
    <relationshipLabel>Endereço das Contas</relationshipLabel>
    <relationshipName>Endere_o_das_Contas</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>