force-app/main/default/objects/Endere_o_da_Conta__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Codigo</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>