force-app/main/default/objects/Endere_o_da_Conta__c/fields/Logradouro__c.field-meta.xml
<CustomField>
    <fullName>Logradouro__c</fullName>
    <label>Logradouro</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>